  information will be very useful because it will list
  all the strings which were updated or added. If you
  encounter a modified string, please look in the 
  reference (english) file to see if you existing
  translation is still valid and update if appropriate.

  [U] = updated, [+] = added, [-] = removed

  ====================================================

  02-13-2003 - default
    [+] strWeightIsNull
    [u] strZoneAppendZoneSelection
    [u] strZoneProbListChain
    [u] strZoneProbNullPri
    [u] strZoneProbListChainLoop

  02-12-2003 - default
    [+] strAppendOthers
    [+] strAppendTextAdNotPossible

  02-11-2003 - default
    [+] strContains
    [+] strNotContains
    [+] strReferer

  02-09-2003 - default
    [+] strCampaignWarningNoWeight
    [+] strCampaignWarningNoTarget

  02-03-2003 - settings
    [u] strConfigLockedDetected
    [+] strFixProblemsBefore
    [+] strFixProblemsAfter

  02-02-2003 - default
    [+] strErrorDBPlain
    [+] strErrorDBSerious
    [+] strErrorDBNoDataPlain
    [+] strErrorDBNoDataSerious
    [+] strErrorDBCorrupt
    [+] strErrorDBContact
    [+] strErrorDBSubmitBug

  01-21-2003 - default
    [u] strDuplicateClientName
    [+] strInvalidPassword
    [+] strNotSamePasswords
    [+] strRepeatPassword
    [+] strOldPassword
    [+] strNewPassword

  01-21-2003 - settings
    [-] strInvalidPassword
    [-] strNotSamePasswords
    [-] strRepeatPassword
    [-] strOldPassword
    [-] strNewPassword

  01-15-2003 - settings
    [+] strUpdateError
    [+] strUpdateDatabaseError
    [+] strIgnoreErrors
    [+] strRetryUpdate

  01-12-2003 - maintenance
    [u] strForUpdatesLookOnWebsite
    [+] strCurrentlyUsing
    [+] strRunningOn
    [+] strAndPlain

  01-07-2003 - settings
    [u] strAdminEmailHeaders
    [u] strWarnLimit
    [u] strWarnLimitErr
    [u] strWarnAdmin
    [u] strWarnClient  

  01-05-2003 - settings
    [+] strGeotrackingLocationError
    [+] strMyHeaderError
    [+] strMyFooterError
    [u] strMyHeader